tests/expectations/compiler/structs/inline_undefined.out
Error [ETYC0372017]: The type `test.aleo::Foo` is not found in the current scope.
    --> compiler-test:3:9
     |
   3 |         let a: Foo = Foo {};
     |         ^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372005]: Unknown struct or record `test.aleo::Foo`
    --> compiler-test:3:22
     |
   3 |         let a: Foo = Foo {};
     |                      ^^^
